# ClipCram

./: .gitignore  Makefile  README.md  README.ru.md  main.py  pyproject.toml
src/: logging_config.py  main.py
src/api/v1/: endpoints.py  router.py
