[project]
name = "clipcram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "asgiref>=3.11.1",
    "celery[redis]>=5.6.3",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]
